[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ui/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Ui/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Ui/Label.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.152941, 0.313726, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.41425
margin_right = -1.41425
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 472.0
margin_bottom = 254.0

[node name="Label" parent="Panel/MarginContainer/Rows" instance=ExtResource( 3 )]
margin_right = 432.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/Rows"]
margin_top = 77.0
margin_right = 432.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="Panel/MarginContainer/Rows"]
margin_top = 124.0
margin_right = 432.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 3 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckpointButton" type="Button" parent="Panel/MarginContainer/Rows"]
margin_top = 171.0
margin_right = 432.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 3 )
text = "Checkpoint"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/MarginContainer/Rows/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/Rows/MenuButton" to="." method="_on_MenuButton2_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/Rows/CheckpointButton" to="." method="_on_CheckpointButton_pressed"]
